--- a/app/views/forms/new.html.erb
+++ b/app/views/forms/new.html.erb
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<%= form_with model: @form, url: forms_path(@form), method: :post, class:"add-form-parent", local: true do |f| %>
+<%= form_with model: @form, url: forms_path(@client), method: :post, class:"add-form-parent", local: true do |f| %>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">追加フォーム１</label>
