--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -138,7 +138,7 @@
   border:1px solid #1B1B1B;
   font-weight: bold;
 	z-index:100;
-	margin-left:270px
+	margin: 30px auto;
 }
 .btn-f:hover {
 	 background: #ffa300;
@@ -167,8 +167,7 @@
    z-index:100;
 }
 .btn-h {
-	margin: 0 auto;
-	margin-top: 30px;
+	margin: 30px auto;
   max-width: 180px;
   text-align: left;
   background-color: #ffa300;
@@ -239,6 +238,26 @@
 	margin: 0 auto;
 }
 .btn-k:hover {
+	 background: #ffa300;
+         color: #fff;
+	 cursor: pointer;
+   text-decoration: none;
+	 z-index:100;
+}
+.btn-l{
+	display: block;
+	width: 250px;
+	padding: 0.8em;
+	text-align: center;
+	text-decoration: none;
+	color: #1B1B1B;
+	background: #fff;
+  border:1px solid #1B1B1B;
+  font-weight: bold;
+	z-index:100;
+	margin-left:230px;
+}
+.btn-l:hover {
 	 background: #ffa300;
          color: #fff;
 	 cursor: pointer;
