--- a/app/views/addinfos/new.html.erb
+++ b/app/views/addinfos/new.html.erb
@@ -3,9 +3,11 @@
 
 <div class="child-a">
       <h3 class="text-title">追加したフォームの情報を入力</h3>
+      <%= @client.id %>
 </div>
 
 <%= form_with model: @addinfo, url: addinfos_path(@addinfo), method: :post, class:"add-form-parent", local: true do |f| %>
+  <%= f.hidden_field :client_id, :value => @client.id %>
   <% unless @allforms.length == 0 %>
   <% @allforms.each do |fo| %>
     <% if fo.user_id == current_user.id %>
@@ -89,7 +91,7 @@
           <% end %>
         </div>
       </div>
-      <%= f.submit "保存する" ,class:"btn-k" %>
+      <%= f.submit "保存する" ,class:"btn-h" %>
     <% end %>
   <% end %>
   <% end %>
