--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -5,18 +5,20 @@
   <div class="child-a">
       <h3 class="text-title">登録済み顧客一覧</h3>
   </div>
-  
-  <ol class="clients">
-    <% @allclients.each do |c| %>
-      <% if c.user_id == current_user.id %>
-        <li class="client">
-          <%=link_to client_path(c.id), method: :get, class:"client-name" do %>
-            <%= c.last_name %><%= " " %><%= c.first_name %>
-          <% end %>
-        </li>
+
+  <div class="child-c">
+    <ol class="clients">
+      <% @allclients.each do |c| %>
+        <% if c.user_id == current_user.id %>
+          <li class="client">
+            <%=link_to client_path(c.id), method: :get, class:"client-name" do %>
+              <%= c.last_name %><%= " " %><%= c.first_name %>
+            <% end %>
+          </li>
+        <% end %>
       <% end %>
-    <% end %>
-  </ol>
+    </ol>
+  </div>
 
   <div class="child-z">
     <%= link_to '新規顧客登録', new_client_path, method: :get, class: "btn-e" %>
