--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -68,9 +68,9 @@
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">郵便番号</label>
-      <span class="form-any">任意</span>
+      <span class="form-any">任意 ハイフンなし</span>
     </div>
-    <%= f.text_field :post_num, class:"input-default", id:"postal-code", placeholder:"例）123-4567", maxlength:"8" %>
+    <%= f.text_field :post_num, class:"input-default", id:"postal-code", placeholder:"例）1234567", maxlength:"7" %>
   </div>
 
   <div class="form-group">
