--- a/app/views/tops/_a-header.html.erb
+++ b/app/views/tops/_a-header.html.erb
@@ -1,6 +1,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="header.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+
   </head>
 
   <body>
