--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" href="tops.scss">
-<link rel="stylesheet" href="tops.css">>
+<link rel="stylesheet" href="tops.css">
 
 <%= render "a-header"%>
 
@@ -18,7 +18,21 @@
   
   <div class="right-contents">
     <div class="tasks">
-      <a class="todays-task">今日のタスク</a>
+      <% @todays_task.each do |day| %>
+        <div class='item'>
+          <div class='date'>
+            <%= day[:month] %>/<%= day[:date] %> <%= day[:wday]%>
+          </div>
+          <div class='content'>
+            <% if day[:tasks].length != 0 %>
+              <% day[:tasks].zip(day[:ids]).each do |task, ids| %>
+                <% @c = Client.find_by(id: ids) %>
+                <div class='plan-list'><%= "#{@c.last_name}様: "%><%= task %></div>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
