--- a/app/assets/stylesheets/tasks.css
+++ b/app/assets/stylesheets/tasks.css
@@ -24,7 +24,8 @@ body {
   border: 2px solid rgb(0, 0, 0);
   width: 20vw;
   height: auto;
-  background-color: #99CCCC;
+  background-color: #f5f5f5;
+  box-shadow: 10px 10px 15px -10px;
 }
 .item-b {
   margin: 0.5vw;
