完了済みタスク一覧に行けるようにした

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -11,7 +11,7 @@
         <%= link_to '顧客一覧', clients_path, method: :get, class: "btn-a" %>
       </div>
       <div class="task-index">
-        <%= link_to 'タスク一覧', tasks_path, method: :get, class: "btn-a" %>
+        <%= link_to 'タスク一覧', new_task_path, method: :get, class: "btn-a" %>
       </div>
     </div>
   </div>
