--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -275,3 +275,21 @@
   transform: translateY(4px);
   border-bottom: none;
 }
+.btn-l{
+	display: block;
+	width: 200px;
+	padding: 0.8em;
+	margin: 7vh auto 15vh;
+	text-align: center;
+	text-decoration: none;
+	color: #1B1B1B;
+	background: #fff;
+  border:1px solid #1B1B1B;
+	font-weight: bold;
+}
+.btn-l:hover {
+	 background: #1B1B1B;
+         color: #fff;
+	 cursor: pointer;
+	 text-decoration: none;
+}
