--- a/app/assets/stylesheets/tasks.css
+++ b/app/assets/stylesheets/tasks.css
@@ -12,7 +12,7 @@ body {
 
 .calendar {
   width: 100vw;
-  margin: 10vh 0;
+  margin-top: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,7 +50,6 @@ body {
   white-space: nowrap;
   overflow: scroll;
   display: block;
-  
 }
 
 .plan-list {
@@ -66,7 +65,6 @@ body {
 
 .lavel {
   font-size: 3vh
-  color: rgb(255, 255, 255); */
 }
 
 .text-input {
