--- a/app/assets/stylesheets/clients/form.css
+++ b/app/assets/stylesheets/clients/form.css
@@ -155,3 +155,10 @@
   text-align: center;
   padding: auto ;
 }
+.btns{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 30px 0;
+}
