--- a/app/assets/stylesheets/clients/show.css
+++ b/app/assets/stylesheets/clients/show.css
@@ -1,26 +1,21 @@
 .parent{
   height: 100vh;
-  /* background-color: lightblue; */
 }
 .child-a{
   text-align: center;
-  /* background-color: white; */
 }
 .child-d{
   display: flex;
-  justify-content: space-between;
-}
-.back-index,
-.next-client{
-  margin: 0 100px 10px 100px;
+  justify-content: center;
 }
 .child-c{
   display: flex;
-  margin-top: 20px;
+  margin: 20px auto 0;
+  width: 90%;
   justify-content: space-around;
   background-color: #3333;
-  /* height: calc(100vh - 200px); */
   padding: 10px 0;
+  border-radius: 20px 20px 0 0 ;
 }
 
 .standard-info,
@@ -48,5 +43,34 @@
 .btn-box{
   background-color: #3333;
   display: flex;
+  margin: 0 auto 30px;
   padding: 30px 0;
+  padding-right: 125px;
+  width: 90%;
+  border-radius: 0 0 20px 20px ;
+}
+.task-form{
+  width: 90%;
+  margin: 0 auto 30px;
+}
+.shows-calendar {
+  margin: 10vh 30px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-size: cover;
+}
+.shows-item {
+  margin: 0.5vw;
+  border: 2px solid rgb(0, 0, 0);
+  width: 17vw;
+  height: 250px;
+  background-color: #f5f5f5;
+  box-shadow: 10px 10px 15px -10px;
+  overflow: auto;
+  border-radius: 20px;
+}
+.blank{
+  width: 160px;
 }
