--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -6,9 +6,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #e6e6e6;
-  /* background-image: image-url("images/jack-o-lantern-with-glowing-smile.jpg");
-  background-size: cover; */
-}
+} 
 header {
   padding: 30px 4% 10px;
   position: fixed;
@@ -18,7 +16,7 @@ header {
   background-color: black;
   display: flex;
   align-items: center;
-  z-index:100;
+  z-index:200;
 }
 h1 {
   margin: 0; padding: 0;
@@ -38,12 +36,11 @@ ul {
   margin: 0;
   display: flex;
 }
-. {
-  
+/* . {
   font-size: 20px;
   text-decoration: none;
   color: white;
-}
+} */
 .sign:hover{
  color: white;
 }
