--- a/app/assets/stylesheets/tops/tops.css
+++ b/app/assets/stylesheets/tops/tops.css
@@ -1,35 +1,28 @@
 .contents{
-  background: image-url("/images/jack-o-lantern-with-glowing-smile.jpg");
-  background-size: cover;
-}
-
-.contents{
   display: flex;
   justify-content: space-around;
-  height: 100vh;
-}
-.left-contents,
-.right-contents{
-  margin-top: 100px;
+  margin: 150px auto 0;
   height: 500px;
+  width: 90%;
   border: #ccc 1px;
-  
-  }
-}
-
-.left-contents{
-  width: 400px;
-}
-.right-contents{
-  width: 600px;
-  background-image: image-url("ack-o-lantern-with-glowing-smile.jpg");
-  background-size: cover;
+  background-color:  #3333;
+  border-radius: 20px;
 }
 .indexs{
   display: flex;
   flex-direction: column;
   padding: 30px;
   align-items: center;
+}
+.today-item {
+  margin: auto 0;
+  border: 2px solid rgb(0, 0, 0);
+  width: 25vw;
+  height: 300px;
+  background-color: #f5f5f5;
+  box-shadow: 10px 10px 15px -10px;
+  overflow: auto;
+  border-radius: 20px;
 }
 
 .task-index,
@@ -43,9 +36,6 @@
 }
 .client-index{
   margin: 10px 30px 30px 30px;
-}
-
-.text-a:hover{
 }
 .btn-circle {
   display: inline-block;
@@ -109,4 +99,8 @@
 .btn-circle span {
   position: relative;
   z-index: 99;
+}
+.notask-text{
+  text-align: center;
+  margin-top: 80px;
 }
