--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,13 +1,12 @@
 <div class="parent">
-
   <%= render "tops/a-header"%>
 
   <div class="child-a">
       <h3 class="text-title">登録済み顧客一覧</h3>
   </div>
 
-  <div class="child-c">
-    <ol class="clients">
+  <div class="clients-index">
+    <ul class="clients">
       <% @allclients.each do |c| %>
         <% if c.user_id == current_user.id %>
           <li class="client">
@@ -17,7 +16,7 @@
           </li>
         <% end %>
       <% end %>
-    </ol>
+    </ul>
   </div>
 
   <div class="child-z">
