--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,23 @@
 <%= render "tops/a-header" %>
+
+<div class="child-a">
+  <h3 class="text-title">完了済みタスク一覧</h3>
+</div>
+
+<div class="done-index">
+  <ul class="done-tasks">
+    <% @alltasks.each do |t| %>
+      <%# if tが完了済みならという記述%>
+        <li class="done-t" >
+          <div class ="tasks-date"> <%= t.date %> </div>
+          <% @c = Client.find_by(id: t.client_id) %>
+          <div class ="tasks-client"> <%= "#{@c.last_name} #{@c.first_name}" %> </div>
+          <div class ="tasks-task"> <%= t.task %> </div>
+        </li>
+      <%# end %>
+    <% end %>
+  </ul>
+</div>
+
+<dt></dt>
+<dd style="display: none;" id="question1">答え１</dd>
