--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -322,8 +322,25 @@
 	border-bottom: 4px solid #CC3333;
 
 }
-
 .btn-o:active {
   transform: translateY(4px);
   border-bottom: none;
+}
+.btn-p{
+	display: block;
+	width: 160px;
+	padding: 0.8em;
+	margin: 30px 40px;
+	text-align: center;
+	text-decoration: none;
+	color: #1B1B1B;
+	background: #fff;
+  border:1px solid #1B1B1B;
+	font-weight: bold;
+}
+.btn-p:hover {
+	 background: #1B1B1B;
+         color: #fff;
+	 cursor: pointer;
+	 text-decoration: none;
 }
