--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -15,16 +15,18 @@
       <%= day[:month] %>/<%= day[:date] %> <%= day[:wday]%>
     </div>
     <div class='content'>
-      <% if day[:tasks].length != 0 %>
+      <% unless day[:tasks].length == 0 %>
         <% day[:tasks].zip(day[:ids]).each do |task, ids| %>
           <% @c = Client.find_by(id: ids) %>
-          <% if @c.user_id == current_user.id %>
+          <% if ids == current_user.id %>
             <div class='plan-list'>
               <%=link_to client_path(@c.id), method: :get, class:"c-link" do %><%= "#{@c.last_name}様: "%><% end %>
               <%= task %>
             </div>
           <% end %>
         <% end %>
+      <% else %>
+        <div class="notask-text"><%= "予定なし" %></div>
       <% end %>
     </div>
   </div>
