--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <%= render "tops/a-header" %>
 
 <div class="child-a">
-  <h3 class="text-title">タスク一覧</h3>
+  <h3 class="text-title">全タスク一覧</h3>
 </div>
 
 <div class="done-index">
