--- a/app/views/forms/new.html.erb
+++ b/app/views/forms/new.html.erb
@@ -9,7 +9,7 @@
   <div class="gide-text">
     必要に応じて入力フォームを追加できます！
     <br>フォームの追加は最大で10個まで可能です。
-    <br>フォームの名前を決めてください。
+    <br>16文字以内でフォームの名前を決めてください。
   </div>
 </div>
 
