--- a/app/views/addinfos/new.html.erb
+++ b/app/views/addinfos/new.html.erb
@@ -5,6 +5,13 @@
       <h3 class="text-title">追加したフォームの情報を入力</h3>
 </div>
 
+<div class="gide-box">
+  <div class="gide-text">
+    あなたが追加したフォームへ情報を登録できます！
+    <br>24文字以内で情報を入力してください。
+  </div>
+</div>
+
 <%= form_with model: @addinfo, url: addinfos_path(@addinfo), method: :post, class:"add-form-parent", local: true do |f| %>
   <%= f.hidden_field :client_id, :value => @client.id %>
   <% unless @allforms.length == 0 %>
