--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -83,7 +83,8 @@
     <ul class="standard-info">
       <% unless @form.nil? %>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name1}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name1}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text1 %></div>
@@ -91,7 +92,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name2}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name2}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text2 %></div>
@@ -99,7 +101,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name3}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name3}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text3 %></div>
@@ -107,7 +110,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name4}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name4}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text4 %></div>
@@ -115,7 +119,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name5}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name5}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text5 %></div>
@@ -123,7 +128,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name6}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name6}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text6 %></div>
@@ -131,7 +137,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name7}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name7}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text7 %></div>
@@ -139,7 +146,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name8}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name8}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text8 %></div>
@@ -147,7 +155,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name9}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name9}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text9 %></div>
@@ -155,7 +164,8 @@
           <% end %>
         </li>
         <li class="info-box">
-          <div class="value-name"><%= "#{@form.f_name10}:" %></div>
+          <div class="value-name"><%= "#{@form.f_name10}" %></div>
+          <div class="colon"><%= ":"%></div>
           <% unless @addinfo.nil? %>
             <% if @addinfo.client_id == @client.id %>
               <div class="info-value"><%= @addinfo.add_text10 %></div>
