--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,15 +1,17 @@
 <%= render "tops/a-header" %>
 
-<%= form_with model: @task, url: tasks_path, method: :post, class: 'form' do |f| %>
-  <%= f.hidden_field :redirect, :value => 0, class: 'lavel' %>
-  <%= f.label :顧客を選択, class: 'lavel' %>
-  <%= f.collection_select :client_id, current_user.clients.all, :id, :last_name ,
-    {prompt: "---"}, {class: "client-select"} %>
-  <%= f.label :日付を選択, class: 'lavel' %>
-  <%= f.date_field :date, class: 'date-select' %>
-  <%= f.label :予定を入力, class: 'lavel' %>
-  <%= f.text_field :task, class: 'text-input' %>
-  <%= f.submit '保存', class: 'btn-m' %>
+<%= form_with model: @task, url: tasks_path, method: :post, class: 'form', local: true do |f| %>
+  <table>
+    <%= f.hidden_field :redirect, :value => 0, class: 'lavel' %>
+    <%= f.label :顧客を選択, class: 'lavel' %>
+    <%= f.collection_select :client_id, current_user.clients.all, :id, :last_name ,
+      {prompt: "---"}, {class: "client-select"} %>
+    <%= f.label :日付を選択, class: 'lavel' %>
+    <%= f.date_field :date, class: 'date-select' %>
+    <%= f.label :予定を入力, class: 'lavel' %>
+    <%= f.text_field :task, class: 'text-input' %>
+    <%= f.submit '保存', class: 'btn-m' %>
+  </table>
 <% end %>
 
 
