--- a/app/assets/stylesheets/clients/form.css
+++ b/app/assets/stylesheets/clients/form.css
@@ -155,10 +155,13 @@
   text-align: center;
   padding: auto ;
 }
-.btns{
+.destroy-btn{
+  margin: 0 auto 30px;
+  width: 90%;
+  background-color: #3333;
+  padding: 10px 0;
+  border-radius: 0 0 20px 20px ;
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 100%;
-  margin: 30px 0;
+  align-items: center;
 }
