--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -299,7 +299,7 @@
   text-decoration: none;
   font-weight: bold;
 	padding: 10px 24px;
-	margin-left: 40px;
+	margin: 0 auto;
   border-radius: 4px;
   border-bottom: 4px solid #d37800;
 }
@@ -317,7 +317,7 @@
 	text-decoration: none;
   font-weight: bold;
 	padding: 10px 24px;
-	margin-right: 40px;
+	margin: 10px 0 30px;
   border-radius: 4px;
 	border-bottom: 4px solid #CC3333;
 
