--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -2,11 +2,10 @@
   box-sizing: border-box;
 }
 body {
-  height: 100vh;
+  height: 80vh;
   margin: 0;
   padding: 0;
-  background-color: #4158D0;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  background: linear-gradient(to right, rgb(43, 192, 228), rgb(234, 236, 198));
   background-attachment: fixed;
 } 
 header {
