--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,17 +7,14 @@
 <div class="done-index">
   <ul class="done-tasks">
     <% @alltasks.each do |t| %>
-      <%# if tが完了済みならという記述%>
         <li class="done-t" >
           <div class ="tasks-date"> <%= t.date %> </div>
           <% @c = Client.find_by(id: t.client_id) %>
-          <div class ="tasks-client"> <%= "#{@c.last_name} #{@c.first_name}" %> </div>
-          <div class ="tasks-task"> <%= t.task %> </div>
+          <% if t.user_id == current_user.id %>
+            <div class ="tasks-client"> <%= "#{@c.last_name} #{@c.first_name}" %> </div>
+            <div class ="tasks-task"> <%= t.task %> </div>
+          <% end %>
         </li>
-      <%# end %>
     <% end %>
   </ul>
 </div>
-
-<dt></dt>
-<dd style="display: none;" id="question1">答え１</dd>
