--- a/app/views/tops/_a-header.html.erb
+++ b/app/views/tops/_a-header.html.erb
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" href="header.css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-    <link rel="stylesheet" href="tops.scss">
-    <link rel="stylesheet" href="tops.css">
-    <link rel="stylesheet" href="image.css">
+    <%# <link rel="stylesheet" href="tops.scss"> %>
+    <%# <link rel="stylesheet" href="tops.css"> %>
+    <%# <link rel="stylesheet" href="image.css"> %>
+    <%# <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> %>
     
   </head>
   <body>
